# azureml-package-example

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  Makefile  README.md  azure-pipelines.yml  environment.yml  pyproject.toml  setup.cfg
cd/scripts/: deploy_cluster.py  deploy_model.py  publish_pipeline.py  trigger_pipeline.py
cd/templates/python/: conda-create.yml  get-package-version.yml
cd/variables/: development.yml  shared.yml
model/: Dockerfile  environment.yml
model/scripts/: my_script.py
model/scripts/deploy/: deploy.py
model/scripts/load/: load_data.py
model/scripts/train/: train.py
tests/: call_model.py
