[metadata]
name = my-package
author = John Smith
author-email = johnsmith@example.com
description = My package.
license = unlicensed
long-description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5.0
install_requires =
  click
  pandas>=1.1.0
  scikit-learn
  azureml-defaults
package_dir=
    =model
packages=find:

[options.packages.find]
where=model
exclude=
    scripts
